--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
     "private": true,
-    "scripts": {
-        "start": "webpack-dev-server",
-        "build": "webpack -p",
-        "test:live": "webpack-dev-server --config webpack.tests.config.js"
+    "engines": {
+        "node": "~16 || ~18",
+        "npm": "~8"
     },
-    "devDependencies": {
-        "copy-webpack-plugin": "^6.1.0",
-        "css-loader": "^5.2.6",
-        "file-loader": "^4.2.0",
-        "html-webpack-plugin": "^3.2.0",
-        "mini-css-extract-plugin": "^0.10.0",
-        "remotedev": "^0.2.9",
-        "sass": "^1.34.0",
-        "sass-loader": "^9.0.3",
-        "source-map-loader": "^1.1.3",
-        "style-loader": "^1.2.1",
-        "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.9",
-        "webpack-dev-server": "^3.8.2"
+    "scripts": {
+        "start": "webpack-dev-server --mode development",
+        "build": "webpack --mode production",
+        "test:live": "webpack-dev-server --mode development --env test"
     },
     "dependencies": {
-        "bulma": "^0.9.3",
         "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "reactstrap": "^9.0.1"
+        "react-dom": "^17.0.2"
+    },
+    "devDependencies": {
+        "copy-webpack-plugin": "^10.0.0",
+        "css-loader": "^6.5.1",
+        "file-loader": "^6.2.0",
+        "html-webpack-plugin": "^5.5.0",
+        "mini-css-extract-plugin": "^2.4.5",
+        "remotedev": "^0.2.9",
+        "sass": "^1.43.4",
+        "sass-loader": "^12.3.0",
+        "source-map-loader": "^3.0.0",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.64.2",
+        "webpack-cli": "^4.9.1",
+        "webpack-dev-server": "^4.5.0"
     }
 }
