--- a/src/Server/Properties/launchSettings.json
+++ b/src/Server/Properties/launchSettings.json
@@ -1,28 +1,12 @@
 {
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:52111/",
-      "sslPort": 44375
-    }
-  },
   "profiles": {
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "Server": {
       "commandName": "Project",
-      "launchBrowser": true,
-      "launchUrl": "http://localhost:8080",
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "ttp://localhost:8085"
+      "applicationUrl": "http://localhost:5000"
     }
   }
 }
