--- a/package.json
+++ b/package.json
@@ -9,10 +9,6 @@
         "build": "webpack --mode production",
         "test:live": "webpack-dev-server --mode development --env test"
     },
-    "dependencies": {
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
-    },
     "devDependencies": {
         "copy-webpack-plugin": "^10.0.0",
         "css-loader": "^6.5.1",
@@ -27,5 +23,11 @@
         "webpack": "^5.64.2",
         "webpack-cli": "^4.9.1",
         "webpack-dev-server": "^4.5.0"
+    },
+    "dependencies": {
+        "bulma": "^0.9.4",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "reactstrap": "^8.7.1"
     }
 }
