--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
-    "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^4.4.1",
     "rxjs": "^7.8.0",
@@ -59,6 +58,7 @@
     "@types/node": "^18.15.11",
     "@types/passport-http": "^0.3.9",
     "@types/passport-jwt": "^3.0.8",
+    "@vercel/ncc": "^0.36.1",
     "jest": "^29.5.0",
     "lorem-ipsum": "^2.0.8",
     "prettier": "^2.8.7",
