--- a/.github/workflows/unit-tests.yaml
+++ b/.github/workflows/unit-tests.yaml
@@ -25,7 +25,7 @@ jobs:
           cache: 'npm'
           cache-dependency-path: package-lock.json
 
-      - uses: ./.github/actions/npminstall
+      - run: npm install
 
       - run: npm run test:unit
         shell: bash
