--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -13,11 +13,10 @@ jobs:
           cache: 'npm'
           cache-dependency-path: package-lock.json
 
-      - uses: ./.github/actions/npminstall
-
       - run: |
-          ./scripts/package.sh
-          zip -r build.zip build
+          npm install
+          make build
+          make zip
         shell: bash
 
       - uses: actions/upload-artifact@v2
