--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,9 +16,9 @@ services:
       DEBUG: 1
       DOCKER_HOST: unix:///var/run/docker.sock
       DISABLE_CORS_CHECKS: 1
-    image: localstack/localstack:1.4
+    image: localstack/localstack:latest
     ports:
       - '4566:4566'
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - ./scripts/aws-local:/docker-entrypoint-initaws.d
+      - ./scripts/aws-local/init.sh:/etc/localstack/init/ready.d/init-aws.sh
