chroe: unzip to directory

--- a/.github/workflows/acceptance-local-tests.yaml
+++ b/.github/workflows/acceptance-local-tests.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Starting localhost server
         shell: sh
         run: |
-          unzip build.zip
+          unzip build.zip -d build
           make nohup/local
 
       - run: npm install
