fix: terraform deploy step

--- a/.github/workflows/deploy-lambda.yaml
+++ b/.github/workflows/deploy-lambda.yaml
@@ -19,8 +19,7 @@ jobs:
         with:
           name: build
 
-      - working-directory: ./terraform/lambda
-        id: terraform
+      - id: terraform
         run: make aws/terraform
         env:
           TF_VAR_DATABASE_URL: ${{ secrets.DATABASE_URL }}
