chore: remove working directory

--- a/.github/workflows/acceptance-localstack-tests.yaml
+++ b/.github/workflows/acceptance-localstack-tests.yaml
@@ -41,8 +41,7 @@ jobs:
         with:
           name: build
 
-      - working-directory: ./terraform/lambda
-        id: terraform
+      - id: terraform
         run: |
           pipx install terraform-local
           make localstack/terraform
