--- a/package.json
+++ b/package.json
@@ -23,12 +23,13 @@
     "@nestjs/platform-express": "^9.3.12",
     "@nestjs/swagger": "^6.3.0",
     "aws-lambda": "^1.0.7",
-    "axios": "^1.3.4",
     "aws-serverless-express": "^3.4.0",
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
     "passport": "^0.6.0",
