--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "rxjs": "^7.8.0",
     "typeorm": "0.3.12",
     "typeorm-naming-strategies": "^4.1.0",
-    "zod": "^3.21.4"
+    "zod": "^3.21.4",
+    "zod-to-json-schema": "^3.20.4"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.19",
