--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@nestjs/passport": "^9.0.3",
     "@nestjs/platform-express": "^9.3.12",
     "@nestjs/swagger": "^6.3.0",
+    "@trpc/client": "^10.20.0",
+    "@trpc/server": "^10.20.0",
     "aws-lambda": "^1.0.7",
     "aws-serverless-express": "^3.4.0",
     "axios": "^1.3.4",
@@ -32,6 +34,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
+    "node-fetch": "^3.3.1",
     "passport": "^0.6.0",
     "passport-http": "^0.3.0",
     "passport-jwt": "^4.0.1",
