fix: pipeline test urls

--- a/.github/workflows/acceptance-docker-tests.yaml
+++ b/.github/workflows/acceptance-docker-tests.yaml
@@ -43,6 +43,10 @@ jobs:
       - run: npm install
 
       - name: Running acceptance tests on localhost server
+        shell: sh
         run: |
-          DRIVER=rest API_URL=http://localhost:3001/api npx jest acceptance
-          DRIVER=trpc API_URL=http://localhost:3001/trpc npx jest acceptance
+          DRIVER=rest npx jest acceptance
+          DRIVER=trpc npx jest acceptance
+        env:
+          API_URL: http://localhost:3001/api
+          TRPC_URL: http://localhost:3001/trpc
