--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,10 +47,15 @@ jobs:
         shell: bash
         name: Unit Tests
 
+      - name: Building Application
+        shell: bash
+        run: |
+          make build setup
+
       - name: Starting localhost server
         shell: bash
         run: |
-          make build zip nohup/local
+          make nohup/local
 
       - run: npm run test:acceptance
         shell: bash
@@ -68,7 +73,13 @@ jobs:
           API_URL: http://localhost:3000/api
           TRPC_URL: http://localhost:3000/trpc
 
-      - uses: actions/upload-artifact@v2
+      - name: Zipping Build
+        shell: bash
+        run: |
+          make zip
+
+      - name: Uploading Build
+        uses: actions/upload-artifact@v2
         with:
           name: build
           path: |
