--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,14 +8,20 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
+    strategy:
+      matrix:
+        go: ['stable']
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: Setup Go
+      - name: Install Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20
+          go-version: ${{ matrix.go }}
+          check-latest: true
 
       - name: Go Tidy
         run: go mod tidy && git diff --exit-code
