--- a/.gitignore
+++ b/.gitignore
@@ -21,11 +21,16 @@
 !.vscode/extensions.json
 .history/*
 
-
 #System Files
 .DS_Store
 Thumbs.db
-
+HELP.md
+.gradle
+build/
+!gradle/wrapper/gradle-wrapper.jar
+!**/src/main/**
+!**/src/test/**
+/out
 
 #log files
 npm-debug.log*
