--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -10,6 +10,9 @@ packages = [{include = "app", from = "src"}]
 python = "3.11.*"
 fastapi = "^0.103.1"
 uvicorn = "^0.23.2"
+sqlalchemy = "^2.0.20"
+pydantic-settings = "^2.0.3"
+pydantic = {extras = ["email"], version = "^2.3.0"}
 
 
 [tool.poetry.group.dev.dependencies]
