--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -13,6 +13,7 @@ uvicorn = "^0.23.2"
 sqlalchemy = "^2.0.20"
 pydantic-settings = "^2.0.3"
 pydantic = {extras = ["email"], version = "^2.3.0"}
+alembic = "^1.12.0"
 
 
 [tool.poetry.group.dev.dependencies]
