--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -10,6 +10,9 @@ python = "3.11.*"
 fastapi = "^0.103.1"
 uvicorn = "^0.23.2"
 pydantic = {extras = ["email"], version = "^2.3.0"}
+sqlalchemy = "^2.0.20"
+pydantic-settings = "^2.0.3"
+alembic = "^1.12.0"
 
 
 [tool.poetry.group.dev.dependencies]
