--- a/src/backend/Domain/Domain.csproj
+++ b/src/backend/Domain/Domain.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CSharpFunctionalExtensions" Version="2.40.3" />
     <PackageReference Include="MediatR" Version="12.2.0" />
   </ItemGroup>
 
