--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@ Thumbs.db
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+db.sqlite3-journal
+
+__pycache__/
+.env
